--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/mgi.png">
                             <h4 class="uk-margin-top">Software Engineer at MobileGroup, Inc.</h4>
-                            <table class="uk-table">
-                                <caption>Lead and Support an Online Ticketing Website, Develop an applications using CodeIgniter and ASP.NET</caption>
+                            <table class="uk-text-left uk-table">
+                                <caption>
+                                    Date Hired: Jul 2014 - Aug 2016 <br><br>
+                                    Lead and Support an Online Ticketing Website, Develop an applications using CodeIgniter and ASP.NET
+                                </caption>
                                 <tbody>
-                                    <tr>
-                                        <td>July 2014 - August 2016</td>
-                                    </tr>
                                     <tr>
                                         <td>Industry: Computer / Information Technology (Software)</td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            Projects
+                                            <span class="uk-heading-line">Projects</span>
                                             <ul class="uk-list">
                                                 <li><a class="text-orange" href="https://www.robinsonsmovieworld.com/" target="_blank">Robinsons Movieworld</a></li>
                                                 <li><a class="text-orange" href="http://limketkaicinemas.com/" target="_blank">Limketkai Cinemas</a></li>
@@ -136,18 +136,18 @@
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/fdc.png">
                             <h4 class="uk-margin-top">Information Systems Specialist at FDC Utilities, Inc.</h4>
-                            <table class="uk-table">
-                                <caption>Data Gathering, Designing ERD and Database Structure, Developed an API with the Front-End Application</caption>
+                            <table class="uk-text-left uk-table">
+                                <caption>
+                                    Date Hired: Aug 2016 - Dec 2016 <br><br>
+                                    Data Gathering, Designing ERD and Database Structure, Developed an API with the Front-End Application
+                                </caption>
                                 <tbody>
-                                    <tr>
-                                        <td>August 2016 - December 2016</td>
-                                    </tr>
                                     <tr>
                                         <td>Industry: Utilities / Power</td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            Projects
+                                            <span class="uk-heading-line">Projects</span>
                                             <ul class="uk-list">
                                                 <li>Energy Trading and Risk Management</li>
                                             </ul>
@@ -159,21 +159,31 @@
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/ft.png">
                             <h4 class="uk-margin-top">Technical Consultant at FastTrack Solutions, Inc.</h4>
-                            <table class="uk-table">
-                                <caption>Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons</caption>
+                            <table class="uk-text-left uk-table">
+                                <caption>
+                                    Date Hired: Apr 2018 - Jul 2019 <br><br>
+                                    Develop SAP Web Portal Application, Batch Programs (.exe) & Add-Ons
+                                </caption>
                                 <tbody>
                                     <tr>
-                                        <td>April 2018 - July 2019</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Industry: Utilities / Power</td>
+                                        <td>Industry: Computer / Information Technology (Software)</td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            Projects
+                                            <span class="uk-heading-line">Projects</span>
                                             <ul class="uk-list">
-                                                <li>SAP B1 Portal (Cellprime Distribution Corp., Asian Transmission Corp., Vivant Corp.)</li>
-                                                <li>SAP B1 Integration (Manila Polo Club Inc., Citistores Inc., Vivant Corp.)</li>
+                                                <li>--- SAP B1 Portal ---<br>
+                                                    Cellprime Distribution Corp. <br>
+                                                    Asian Transmission Corp. <br>
+                                                    Vivant Corp
+                                                </li>
+                                                <li></li>
+                                                <li>
+                                                    --- SAP B1 Integration --- <br>
+                                                    Manila Polo Club Inc. <br>
+                                                    Citistores Inc. <br>
+                                                    Vivant Corp. <br>
+                                                </li>
                                             </ul>
                                         </td>
                                     </tr>
@@ -183,18 +193,18 @@
                         <div class="uk-text-center@s">
                             <img class="uk-border-circle" src="app/src/img/ew.png">
                             <h4 class="uk-margin-top">Programmer Analyst at Eastwest Banking Corporation</h4>
-                            <table class="uk-table">
-                                <caption>Sprint Developer that delivers enhancements, bug fix & new functionalities for 2 to 4 weeks per sprint</caption>
+                            <table class="uk-text-left uk-table">
+                                <caption>
+                                    Date Hired: Jul 2019 - Present <br><br>
+                                    Sprint Developer that delivers enhancements, bug fix & new functionalities for 2 to 4 weeks per sprint
+                                </caption>
                                 <tbody>
-                                    <tr>
-                                        <td>July 2019 - Present</td>
-                                    </tr>
                                     <tr>
                                         <td>Industry: Banking</td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            Projects
+                                            <span class="uk-heading-line">Sprints</span>
                                             <ul class="uk-list">
                                                 <li><a class="text-orange" href="https://personal.eastwestbanker.com/Retail/servletcontroller" target="_blank">Retail Banking</a></li>
                                                 <li><a class="text-orange" href="https://personal.eastwestbanker.com/enrollment/servletcontroller" target="_blank">Debit/Credit Card Enrollment</a></li>
