--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                                 <li>--- SAP B1 Portal ---<br>
                                                     Cellprime Distribution Corp. <br>
                                                     Asian Transmission Corp. <br>
-                                                    Vivant Corp
+                                                    Vivant Corp.
                                                 </li>
                                                 <li></li>
                                                 <li>
