--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="author" content="Anthony Cortez">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Facebook Meta Tags -->
-        <meta property="og:url"                content="https://iamtonysoftwaredev.github.io/" />
+        <meta property="og:url"                content="https://iamtonysoft.github.io/" />
         <meta property="og:type"               content="website" />
         <meta property="og:title"              content="alcortez" />
         <meta property="og:description"        content="Internet is my bestfriend..." />
@@ -24,7 +24,7 @@
             <div class="uk-hidden@m">
                 <nav class="uk-navbar uk-navbar-container uk-margin uk-margin-remove-bottom" uk-navbar uk-sticky>
                      <div class="uk-navbar-center">
-                        <a class="uk-navbar-item uk-logo text-cursive" href="https://iamtonysoftwaredev.github.io" uk-scroll>TONY</a> 
+                        <a class="uk-navbar-item uk-logo text-cursive" href="https://iamtonysoft.github.io" uk-scroll>TONY</a> 
                     </div> 
                     <div class="uk-navbar-right">
                         <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-usage" uk-toggle></a>
@@ -48,7 +48,7 @@
                             <div>
                                 <ul class="uk-navbar-nav">
                                     <li><a href="#certification" uk-scroll>Certification</a></li>
-                                    <li><a class="text-orange" href="https://iamtonysoftwaredev.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
                                     <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
@@ -71,7 +71,7 @@
                                 <footer>Hikigaya Hachiman</footer>
                             </blockquote> 
                             <div class="uk-inline">
-                                <a href="https://github.com/iamtonysoftwaredev" class="uk-icon-button" uk-icon="icon: github"></a>
+                                <a href="https://github.com/iamtonysoft" class="uk-icon-button" uk-icon="icon: github"></a>
                                 <a href="https://www.linkedin.com/in/iamtonysoft/" class="uk-icon-button" uk-icon="icon: linkedin"></a>
                                 <a href="https://www.facebook.com/syntax.error.undefined" class="uk-icon-button" uk-icon="icon: facebook"></a>
                             </div>
@@ -289,12 +289,12 @@
                             <div class="uk-text-center@s uk-position-center">
                                 <h3 class="uk-heading-line"><span class="text-cursive">TONY</span></h3>
                                 <ul id="menu-list" class="uk-list">
-                                    <li><a href="https://iamtonysoftwaredev.github.io">Home</a></li>
+                                    <li><a href="https://iamtonysoft.github.io">Home</a></li>
                                     <li><a href="#about">About</a></li>
                                     <li><a href="#experience">Experience</a></li>
                                     <li><a href="#skills">Skills</a></li>
                                     <li><a href="#certification">Certification</a></li>
-                                    <li><a class="text-orange" href="https://iamtonysoftwaredev.github.io/blog/" target="_blank">Blog</a></li>
+                                    <li><a class="text-orange" href="https://iamtonysoft.github.io/blog/" target="_blank">Blog</a></li>
                                     <li><a class="text-orange" href="app/src/file/TonyCV.pdf" target="_blank">CV</a></li>
                                 </ul>
                             </div>
