--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Work Experience</span></a></li>
-        <li><a href="#services"><i class="bx bx-brain"></i> <span>Skill Set</span></a></li>
+        <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Work</span></a></li>
+        <li><a href="#services"><i class="bx bx-brain"></i> <span>Skills</span></a></li>
         <li><a href="#portfolio"><i class="bx bx-certification"></i> <span>Certificates</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
@@ -48,8 +48,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Anthony Cortez</h1>
-      <p>I'm <span class="typed" data-typed-items="Software Engineer, Web Developer"></span></p>
+      <h1 class="text-white">Anthony Cortez</h1>
+      <p class="text-white">I'm <span class="typed" data-typed-items="Software Engineer, Web Developer"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
