--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="text-white">Anthony Cortez</h1>
-      <p class="text-white">I'm <span class="typed" data-typed-items="Software Engineer, Web Developer"></span></p>
+      <p class="text-white">I'm <span class="typed" data-typed-items="Software Engineer,Information Systems Specialist,Technical Consultant,Programmer Analyst"></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -75,7 +75,7 @@
             <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Software Engineer & Web Developer</h3>
+            <h3>Software Engineer/Information Systems Specialist/Technical Consultant/Programmer Analyst</h3>
             <p class="font-italic">
               I've been working as a developer since year 2014.
             </p>
