--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> August 3, 1992</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> iamtonysoft.github.io</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Status:</strong> Single</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 28</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Sciene in Information Technology</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Sciene in I.T.</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> Filipino</li>
                 </ul>
               </div>
             </div>
