--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-          <div class="col-lg-12 col-md-12 portfolio-item filter-app">
+          <div class="col-lg-12 col-md-12 portfolio-item filter-app filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/skills.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -202,7 +202,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Microsoft</li>
-              <li data-filter=".filter-card">Codecademy</li>
+              <li data-filter=".filter-card">Udemy</li>
             </ul>
           </div>
         </div>
