--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
+          <div class="col-lg-3">
+            <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
+          <div class="col-lg-9 pt-4 pt-lg-0 content">
             <h3>Software Engineer/Information Systems Specialist/Technical Consultant/Programmer Analyst</h3>
             <p class="font-italic">
               I've been working as a developer since year 2014.
