Change profile img and job description

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="row">
           <div class="col-lg-3">
-            <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img2.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-9 pt-4 pt-lg-0 content">
             <h3>Software Engineer/Information Systems Specialist/Technical Consultant/Programmer Analyst</h3>
@@ -123,6 +123,11 @@
                 <li>Part of the sprint team that delivers enhancements, bug fix & new functionalities for 2 to 4 weeks per sprint</li>
                 <li>Develop an automated system using selenium to enhance and to make the System Integration Testing much faster</li>
                 <li>Secondary Support/Developer for Retail Banking, Card Enrollment, Self Service Bank Facility, Mobile Application</li>
+                <li>Dev Application(s) -</li>
+                <li><a href="https://personal.eastwestbanker.com/Retail/servletcontroller" target="_blank">EastWestBanker (Personal)</a></li>
+                <li><a href="https://personal.eastwestbanker.com/enrollment/servletcontroller" target="_blank">EastWestBanker (Enrollment)</a></li>
+                <li><a href="https://personal.eastwestbanker.com/selfservice/servletcontroller" target="_blank">EastWestBanker (SelfService)</a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=com.eastwest.mobile" target="_blank">EastWestBanker (MobileApp)</a></li>
               </ul>
             </div>
             <div class="resume-item">
