--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iamtonysoft.github.io</title>
+  <title>Tonysoft | Freelance Web Developer</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
+  <meta property="og:title" content="Tonysoft | Freelance Web Developer">
+  <meta property="og:image" content="https://iamtonysoft.github.io/assets/img/hero-bg.jpg">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
