--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Tonysoft | Freelance Web Developer</title>
+  <title>Tonysoft | Freelance Web & Application Developer</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-  <meta property="og:title" content="Tonysoft | Freelance Web Developer">
+  <meta property="og:title" content="Tonysoft | Freelance Web & Application Developer">
   <meta property="og:image" content="https://iamtonysoft.github.io/assets/img/hero-bg.jpg">
 
   <!-- Google Fonts -->
