--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 28</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 32</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Sciene in I.T.</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Nationality:</strong> Filipino</li>
                 </ul>
@@ -118,8 +118,16 @@
           <div class="col-lg-12">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Senior Software Engineer at TRUDI Solutions</h4>
+              <h5>June 2022 - Present</h5>
+              <p><em>Pasong Tamo Ext. Makati City, PH</em></p>
+              <ul>
+                <li>Developed web and mobile applications for multiple clients, ensuring high performance and user satisfaction.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Programmer Analyst at Eastwest Banking Corporation</h4>
-              <h5>Jul 2019 - Present</h5>
+              <h5>Jul 2019 - June 2022</h5>
               <p><em>Pasong Tamo Ext. Makati City, PH</em></p>
               <ul>
                 <li>Part of the sprint team that delivers enhancements, bug fix & new functionalities for 2 to 4 weeks per sprint</li>
